# HW12_scrappy_and_parse_OLX

./: .gitignore  docker-compose.yaml  main.py  pyproject.toml  readme.md  tag.xml
client/: client.py
config/: config.yaml
migrations/: env.py
migrations/versions/: 308012c713b9_init.py  e176e62958c9_init.py
src/: app.py  routes.py  security.py  settings.py  utils.py
src/repository/mongo/: models.py  olx_flats.py
src/repository/postgres/: models.py  users.py
src/static/: style.css
src/templates/: base.html
src/templates/pages/scrappy/: olx_scrappy.html  url_scrappy.html
src/views/auth/: views.py
src/views/scrappy/: views.py
src/workers/: async_web_scrapper.py  olx_worker.py  url_dict.json  url_lib.py  url_list.json  web_scrapper.py
src/workers/data/: olx_pagination.html
