[tool.poetry]
name = "hw12"
version = "0.1.0"
description = ""
authors = ["Alexey Vedmedev <al.vedmedev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
aiohttp = "^3.8.3"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"
mongoengine = "^0.24.2"
Jinja2 = "^3.1.2"
aiohttp-jinja2 = "^1.5"
aiohttp_security = "^0.4.0"
bcrypt = "^4.0.1"
SQLAlchemy = "^1.4.45"
psycopg2 = "^2.9.5"
motor = "^3.1.1"
aiohttp-session = "^2.12.0"
asyncpg = "^0.27.0"
alembic = "^1.9.0"
pydentic = "^0.0.1.dev3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
